[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Images/Circle-icons-flame.svg.png" type="Texture" id=1]
[ext_resource path="res://Scenes/MiniGame/Tinder/card.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Fonts/BeautifulPeoplePersonalUse-dE0g.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Assets/Sounds/romantic-bolero-orchestra-and-sax-romantic-south-american-music-1815.mp3" type="AudioStream" id=4]
[ext_resource path="res://Scenes/MiniGame/Tinder/app.gd" type="Script" id=11]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0.0129032 )
colors = PoolColorArray( 0.94902, 0.94902, 0.94902, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 1, 1, 1, 1 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 48
outline_size = 4
outline_color = Color( 0.776471, 0.360784, 0.360784, 1 )
font_data = ExtResource( 3 )

[node name="App" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
texture = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NinePatchRect2" type="NinePatchRect" parent="."]
anchor_right = 1.0
margin_bottom = 80.0
mouse_filter = 1
texture = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
margin_bottom = 193.0
rect_min_size = Vector2( 0, 80 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Circle-icons-flamesvg" type="Sprite" parent="TopContainer"]
position = Vector2( 128, 40 )
scale = Vector2( 0.08, 0.08 )
texture = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="TopContainer"]
margin_right = 480.0
margin_bottom = 193.0
alignment = 1

[node name="Title" type="Label" parent="TopContainer/HBoxContainer"]
margin_left = 178.0
margin_right = 301.0
margin_bottom = 193.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0.92549, 0.815686, 0.435294, 1 )
text = "Cinder
"

[node name="CardContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -640.0
margin_bottom = -20.0
rect_min_size = Vector2( 0, 620 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 20
custom_constants/margin_left = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Card" parent="CardContainer" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_right = 460.0
margin_bottom = 620.0
rect_pivot_offset = Vector2( 515, 740 )
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MatchContainer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="dislike" from="CardContainer/Card" to="." method="on_card_disliked"]
[connection signal="finished" from="CardContainer/Card" to="." method="_on_Card_finished"]
[connection signal="like" from="CardContainer/Card" to="." method="on_card_liked"]
[connection signal="moving" from="CardContainer/Card" to="." method="_on_Card_moving"]
